# animRBF

./: .gitignore  LICENSE  README.md  build_installer.bat  build_installer.spec  dragDropInstaller.py  install.py  installer_gui.py  versions.md
docs/源文档/: 优化提示词：Claude插件开发.docx
docs/源文档/技术分析MD/: original_analysis_reports_Report_01_Multi_Rig_System.md  original_analysis_reports_Report_02_Muscle_Expression.md  original_analysis_reports_Report_03_Graphics_Customization.md  original_analysis_reports_Report_04_Auxiliary_Bones.md  original_analysis_reports_Report_05_RBF_Large_Datasets.md  original_analysis_reports_Report_06_Linear_Regression_Regularization.md  original_analysis_reports_Report_07_RBF_Intro.md  original_analysis_reports_Report_08_ChadVernon_RBF_Basic.md  original_analysis_reports_Report_09_Cholesky_Decomposition.md  original_analysis_reports_Report_10_LU_Decomposition.md  original_analysis_reports_Report_11_Moore_Penrose_Inverse.md  original_analysis_reports_Report_12_RBF_Quaternion_Input.md  original_analysis_reports_Report_13_RBF_Quaternion_Output.md
docs/设计文档/: EXECUTOR_PROMPT.md  RBFtools_v5_addendum_20260424.md  RBFtools_v5_milestone_2_summary.md  RBFtools_v5_milestone_3_summary.md  RBFtools_v5_设计方案.md
modules/RBFtools/plug-ins/win64/2022/: RBFtools.mll
modules/RBFtools/plug-ins/win64/2025/: RBFtools.mll
modules/RBFtools/scripts/: AERBFtoolsTemplate.mel  RBFtoolsEditRBF.mel  RBFtoolsGetRadius.mel  RBFtoolsLockRadiusType.mel  RBFtoolsMenu.py  RBFtoolsUI.py  RBFtoolsUpdateEvaluation.mel  userSetup.py
modules/RBFtools/scripts/RBFtools/: __init__.py  constants.py  controller.py  core.py  core_alias.py  core_json.py  core_live.py  core_mirror.py  core_neutral.py  core_profile.py  core_prune.py
modules/RBFtools/tests/: README.md  _mayapy_fixtures.py  _reference_impl.py  conftest.py  test_conftest_dual_env.py  test_i18n_no_hardcoded_strings.py  test_m1_1_distance.py  test_m1_2_baseline.py  test_m1_3_clamp.py  test_m1_4_solver.py  test_m1_5_1b_build.py  test_m1_5_2_calibration_deferred.py  test_m1_5_fixture_boundary.py  test_m2_1a_encoding.py  test_m2_1b_encoding.py  test_m2_2_qwa.py  test_m2_3_local_transform.py  test_m2_4a_core.py  test_m2_4a_widgets.py  test_m2_4b_widgets.py  test_m2_5_cache.py  test_m3_0_infrastructure.py  test_m3_0_spillover.py  test_m3_1_prune.py  test_m3_2_mirror.py  test_m3_3_jsonio.py  test_m3_4_live_edit.py  test_m3_5_profile.py  test_m3_6_neutral.py  test_m3_7_alias.py  test_m_addpose_multi_driven.py  test_m_b24a1_schema.py  test_m_b24a2_migration.py  test_m_b24a2_versioned_schema.py  test_m_b24b1_widgets.py  test_m_b24b2_downstream.py  test_m_b24c_mirror_multi.py  test_m_b24d_data_path.py  test_m_b24d_matrix_followup.py  test_m_basedrivenpose_tab.py  (+49 more)
modules/RBFtools/tests/fixtures/: legacy_v5_pre_b24.json  legacy_v5_pre_b24.ma
source/: BRMatrix.cpp  BRMatrix.h  CMakeLists.txt  RBFtools.cpp  RBFtools.h  pluginMain.cpp
tools/: build_installer.bat  build_installer.spec
(+36 files in other folders)
